# TinadecOffice

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TinadecOffice.sln.DotSettings  TinadecOffice.slnx  package-lock.json  package.json  screenshot_test.py
.github/workflows/: linter.yml
.ponytail/: config.json  rules.md
.trae/documents/: desktop-ui-redesign-plan-v2.md  desktop-ui-redesign-plan.md  fix-model-center-ui.md
TinadecTools/: Nlog.config  Program.cs  TinadecTools.csproj
TinadecTools.Generators/: ToolFunctionGenerator.cs
TinadecTools/Abstractions/: ToolCalling.cs  ToolHandlerBase.cs  ToolRegistry.cs
TinadecTools/Runtime/: TerminalRunner.cs
apps/desktop/: AGENTS.md  package.json
apps/gateway/: AGENTS.md
docs/: agent-debug-studio-plan.md  agent-harness-product-model.en.md  agent-harness-product-model.zh-CN.md  ai-tools-integration-guide.md  ai-tools-quick-start.md  architecture-compliance-verification.md  architecture.md  gateway-extraction-and-tool-bridge.md  gateway-extraction-rust-removal-checklist.md  git-module-status-and-roadmap.md  security.md  startup.md
gateway/: AGENTS.md  package.json
gateway/src/: codeTools.test.ts  codeTools.ts  coreClient.test.ts  debugProxy.ts  index.ts  toolLayerBridge.ts
native/: AGENTS.md
native/glue/code-native/: Cargo.toml
native/glue/code-native/src/: main.rs
scripts/: test-ai-tools.ps1
tmp/: brand-icons.json  build_errors.txt  build_errors2.txt  build_errors3.txt  build_errors4.txt  build_errors5.txt  cs_errors.txt  download-icons.cjs  final-icons.json  simple-icons-extracted.json
(+216 files in other folders)
