[package]
name = "tinadec-code-native"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tinadec-code-native"
path = "src/main.rs"

[dependencies]
codex-apply-patch = { path = "../codex-apply-patch-lite" }
codex-exec-server = { path = "../codex-exec-server-shim" }
codex-file-search = { path = "../../codex-src/codex-rs/file-search" }
codex-utils-absolute-path = { path = "../../codex-src/codex-rs/utils/absolute-path" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
tokio = { version = "1", features = ["rt"] }
